--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,5 +1,16 @@
+<div class="text-center">
+    <button class="btn btn-warning" (click)="blogService.newPost('cs144', 123)">
+    New Post
+    </button>
+</div>
+<br>
+<ul class="list-group">
+    <li class="list-group-item" *ngFor="let post of posts" (click)="blogService.getPost(post.postid)">
+        <span class="badge badge-pill badge-primary">
+        {{ post.created | date:'medium' }}
+        </span>
+        {{ post.title }}
+    </li>
 <ul>
-    <li>sada</li>
-    <li *ngFor="let post of posts"> {{ post.title }} </li>
-<ul>
-<input type="submit" (click)="getPosts()">
+<br>
+<div class="text-center"><button class="btn btn-info" (click)="getPosts()">Get Posts</button></div>
