--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<div class="col-md-4">
-<app-list></app-list>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4">
+            <app-list [posts]="posts"></app-list>
+        </div>
+        <div class="col-md-8">
+            <app-edit></app-edit>
+        </div>
+    </div>
 </div>
