--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -6,11 +6,17 @@
 <br>
 <ul class="list-group">
     <li class="list-group-item" *ngFor="let post of posts" (click)="blogService.getPost(post.postid)">
-        <span class="badge badge-pill badge-primary">
-        {{ post.created | date:'medium' }}
-        </span>
-        {{ post.title }}
+        <a href="#/edit/{{ post.postid }}">
+            <span class="badge badge-pill badge-primary">
+                {{ post.created | date:'medium' }}
+            </span>
+            {{ post.title }}
+        </a>
     </li>
 <ul>
 <br>
-<div class="text-center"><button class="btn btn-info" (click)="getPosts()">Get Posts</button></div>
+<div class="text-center">
+    <button class="btn btn-info" (click)="getPosts()">
+    Get Posts
+    </button>
+</div>
