--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-4">
-            <app-list [posts]="posts"></app-list>
+            <app-list></app-list>
         </div>
         <div class="col-md-8">
             <app-edit></app-edit>
