--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -5,7 +5,7 @@
 </div>
 <br>
 <ul class="list-group">
-    <li class="list-group-item" *ngFor="let post of posts" (click)="blogService.getPost(post.postid)">
+    <li class="list-group-item" *ngFor="let post of posts">
         <a href="#/edit/{{ post.postid }}">
             <span class="badge badge-pill badge-primary">
                 {{ post.created | date:'medium' }}
