--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,6 +1,6 @@
 <form class="form-group">
-    Title: <input class="form-control" type="text" name="title"/>
-    Body: <textarea class="form-control" type="text-a"name="body" row="5"></textarea>
+    Title: <input [(ngModel)]="post.title" class="form-control" type="text" name="title"/>
+    Body: <textarea [(ngModel)]="post.body" class="form-control" name="body" row="5"></textarea>
     <br>
     <button type="button" class="btn btn-danger">Delete</button>
     <button type="button" class="btn btn-success">Save</button>
