--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -5,7 +5,7 @@
 </div>
 <br>
 <ul class="list-group">
-    <li class="list-group-item" *ngFor="let post of posts">
+    <li class="list-group-item" *ngFor="let post of blogService.posts">
         <a href="#/edit/{{ post.postid }}">
             <span class="badge badge-pill badge-primary">
                 {{ post.created | date:'medium' }}
@@ -15,8 +15,3 @@
     </li>
 <ul>
 <br>
-<div class="text-center">
-    <button class="btn btn-info" (click)="getPosts()">
-    Get Posts
-    </button>
-</div>
