--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
             <app-list></app-list>
         </div>
         <div class="col-md-8">
-            <app-edit></app-edit>
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
