--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,6 +1,8 @@
 <form class="form-group">
-    Title: <input [(ngModel)]="post.title" class="form-control" type="text" name="title"/>
-    Body: <textarea [(ngModel)]="post.body" class="form-control" name="body" row="5"></textarea>
+    <span class="badge badge-primary">Title:</span> <input [(ngModel)]="post.title" class="form-control" type="text" name="title"/>
+    <span class="badge badge-info">Body: </span> <textarea [(ngModel)]="post.body" class="form-control" name="body" row="10" cols="50"></textarea>
+    <span class="badge badge-success">Last Modified:</span> {{ post.created | date:'medium' }}
+    <br>
     <br>
     <button type="button" (click)="deletePost()" class="btn btn-danger">Delete</button>
     <button type="button" (click)="updatePost()" class="btn btn-success">Save</button>
