Add better styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
-<div class="container-fluid">
+<div>
+<h1 class="title">Markdown Editor</h1>
+</div>
+<div class="container-fluid" id="app">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4" id="list">
             <app-list></app-list>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8" id="outlet">
             <router-outlet></router-outlet>
         </div>
     </div>
